removed username from module url (#10)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "dotfiles"]
 	path = dotfiles
-	url = https://folfy@github.com/folfy/dotfiles.git
+	url = https://github.com/folfy/dotfiles.git
 	branch = master
